--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
     "@mui/x-data-grid-generator": "^7.12.0",
+    "@types/lodash": "^4.17.7",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
