--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "@mui/x-data-grid-generator": "^7.12.0",
     "@tanstack/react-query": "^5.51.21",
     "@types/lodash": "^4.17.7",
+    "@types/qs": "^6.9.15",
     "change-case": "^5.4.4",
     "lodash": "^4.17.21",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
