--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,9 +1,6 @@
 [tool.poetry]
-name = "address-book-backend"
-version = "0.5.0"
-description = ""
-authors = ["Sahar Zolberg <saharz321@gmail.com>"]
-readme = "README.md"
+package-mode = false
+
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -11,6 +8,9 @@ fastapi = "^0.112.0"
 uvicorn = "^0.30.5"
 aiosqlite = "^0.20.0"
 alchemical = "^1.0.2"
+pyjwt = {extras = ["crypto"], version = "^2.9.0"}
+argon2-cffi = "^23.1.0"
+fastapi-mail = "^1.4.1"
 
 
 [build-system]
