--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,14 @@
     "@tanstack/react-query": "^5.51.21",
     "@types/lodash": "^4.17.7",
     "@types/qs": "^6.9.15",
+    "axios": "^1.7.4",
     "change-case": "^5.4.4",
     "lodash": "^4.17.21",
     "qs": "^6.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-cookie": "^7.2.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
